--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,8 +54,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets\Photon\PhotonRealtime\Demos\DemoLoadBalancing\ConnectAndJoinRandomLb.cs" />
+    <Compile Include="Assets\Scripts\Network\Photon_test\QuickStartRoomController.cs" />
     <Compile Include="Assets\Scripts\CardManager.cs" />
     <Compile Include="Assets\Photon\PhotonLibs\WebSocket\SocketWebTcp.cs" />
+    <Compile Include="Assets\Scripts\Network\Photon_test\DelayStartLobbyController.cs" />
     <Compile Include="Assets\Scripts\HandDisplayer.cs" />
     <Compile Include="Assets\Scripts\FieldDisplayer.cs" />
     <Compile Include="Assets\Photon\PhotonChat\Demos\DemoChat\ChatAppIdCheckerUI.cs" />
@@ -64,26 +66,25 @@
     <Compile Include="Assets\Photon\PhotonChat\Demos\Common\EventSystemSpawner.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\DiscardPileManager.cs" />
+    <Compile Include="Assets\Scripts\Network\Photon_test\DelayStartRoomController.cs" />
     <Compile Include="Assets\Scripts\HandPlacement.cs" />
     <Compile Include="Assets\Scripts\Hand.cs" />
     <Compile Include="Assets\Photon\PhotonLibs\WebSocket\WebSocket.cs" />
     <Compile Include="Assets\Photon\PhotonChat\Demos\Common\TextButtonTransition.cs" />
+    <Compile Include="Assets\Scripts\Network\Photon_test\GameSetupController.cs" />
     <Compile Include="Assets\Photon\PhotonChat\Demos\DemoChat\NamePickGui.cs" />
+    <Compile Include="Assets\Scripts\Network\Photon_test\NetworkController.cs" />
     <Compile Include="Assets\Scripts\Field.cs" />
     <Compile Include="Assets\Photon\PhotonChat\Demos\DemoChat\IgnoreUiRaycastWhenInactive.cs" />
     <Compile Include="Assets\Photon\PhotonChat\Demos\DemoChat\FriendItem.cs" />
     <Compile Include="Assets\Photon\PhotonChat\Demos\DemoChat\ChatGui.cs" />
     <Compile Include="Assets\Scripts\Card.cs" />
+    <Compile Include="Assets\Scripts\Network\Photon_test\QuickStartLobbyController.cs" />
     <Compile Include="Assets\Scripts\DrawPileManager.cs" />
     <Compile Include="Assets\Photon\PhotonChat\Demos\Common\TextToggleIsOnTransition.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Photon\PhotonChat\Demos\Common\OnStartDelete.cs" />
-    <Compile Include="Assets\Scripts\Network\Photon_test\GameSetupController.cs" />
-    <Compile Include="Assets\Scripts\Network\Photon_test\NetworkController.cs" />
-    <Compile Include="Assets\Scripts\Network\Photon_test\QuickStartRoomController.cs" />
-    <Compile Include="Assets\Scripts\Network\Photon_test\DelayStartRoomController.cs" />
-    <Compile Include="Assets\Scripts\Network\Photon_test\DelayStartLobbyController.cs" />
-    <Compile Include="Assets\Scripts\Network\Photon_test\QuickStartLobbyController.cs" />
+    <Compile Include="Assets\Scripts\Mythology\MainMenuManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
